# Server-Assistant

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_initial.sql  0002_ubuntu_server_ssh_tool.sql  0003_mcp_tool_builder.sql  0004_model_mcp_tools.sql  0005_web_search_tool.sql  0006_chat_context_settings.sql  0007_model_persona_settings.sql  0008_postgres_query_tool.sql  0009_chat_context_less_aggressive_defaults.sql
backend/orchestrator-rust/: Cargo.toml  README.md
backend/orchestrator-rust/docs/: TUTORIAL.md
backend/orchestrator-rust/docs/tools/: buscar_cliente.md  buscar_documentacao.md  consultar_estoque.md  consultar_pedido.md  consultar_politica_comercial.md  emitir_nota_fiscal.md  gerar_bot_whatsapp.md  gerar_scaffold_api.md  gerar_schema_openapi.md  gerar_webhook_handler.md  listar_oportunidades.md  rag_ask.md  rag_ingest.md  rag_search.md  registrar_interacao.md  tools_health.md
backend/orchestrator-rust/src/: auth.rs  config.rs  main.rs  rate_limit.rs  registry.rs  sse_transport.rs  stdio_transport.rs
backend/orchestrator-rust/src/http/: mod.rs
backend/orchestrator-rust/src/tools/: devtools.rs  internal_systems.rs  mod.rs  rag.rs  sales.rs  server_admin.rs  tests.rs  web_search.rs
backend/src/: main.rs
backend/src/api/: router.rs
backend/src/auth/: mod.rs
backend/src/config/: mod.rs
backend/src/domain/: ai.rs  entities.rs  mod.rs
backend/src/infrastructure/: mod.rs
backend/src/shared/: mod.rs
backend/src/telemetry/: mod.rs
backend/tests/: health.rs
frontend/: Dockerfile  (+7 more)
(+38 files in other folders)
